2011-08-16  Stefano Lattarini  <stefano.lattarini@gmail.com>

	parallel-tests: no more spurious successes for FreeBSD make
	Work around a bug of FreeBSD make bug that was causing the
	automake-generated "check" target to complete with success
	even if some tests failed; this happened only when FreeBSD
	make was run in concurrent mode (as in, e.g., "make -j2
	check").  The bug is not present in NetBSD make.
	This change fixes automake bug#9245:
	 <http://debbugs.gnu.org/cgi/bugreport.cgi?bug=9245>
	See also FreeBSD PR bin/159730:
	 <http://www.freebsd.org/cgi/query-pr.cgi?pr=159730>
	* lib/am/check.am [%?PARALLEL_TESTS%] $(TEST_SUITE_LOG): Use a
	more "safe" (and apparently redundant) idiom to exit with error,
	so that the non-zero exit status is picked up also by FreeBSD
	make when it's running in concurrent mode.
	* NEWS: Update.
	* tests/check-concurrency-bug9245.test: New test.
	* tests/Makefile.am (TESTS): Update.

2011-08-11  Stefano Lattarini  <stefano.lattarini@gmail.com>

	hacking: we now require autoconf 2.68
	* HACKING ("Working in git"): Use autoconf and autom4te 2.68,
	not 2.67, in the examples.

2011-08-08  Stefano Lattarini  <stefano.lattarini@gmail.com>

	test defs: more environment cleanup
	* tests/defs.in: Also unset variables AM_COLOR_TESTS and
	AM_TESTS_ENVIRONMENT.

2011-08-08  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix spurious failure with Solaris make
	* tests/distcheck-configure-flags-am.test: Avoid using `+=' too
	liberally with AM_DISTCHECK_CONFIGURE_FLAGS, since the line breaks
	so introduced, in conjunction with single quotes, might confuse
	Solaris make.

2011-08-03  Stefano Lattarini  <stefano.lattarini@gmail.com>

	maintcheck: fix maintainer-check failures, both real and spurious
	* tests/amhello-binpkg.test: Use "$MAKE", not bare "make".
	* Makefile.am (sc_perl_local): Also allow perl special variable
	`$~' to be localized.  And be slightly laxer in the regexp, to
	allow for usages like "local $_ = $foo;".