@@ -1,3 +1,14 @@
+2011-08-16  Daniel Richard G. <skunk@iskunk.org>  (tiny change)
+	    Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	java: avoid compilation errors when CLASSPATH is empty
+	* lib/am/java.am (CLASSPATH_ENV): When redefining `$CLASSPATH',
+	do not append an empty component in case the previous value of
+	CLASSPATH is empty or unset.
+	* tests/java-empty-classpath.test: New test.
+	* tests/Makefile.am (TESTS): Update.
+	Fixes automake bug#9306.
+
 2011-08-16  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	parallel-tests: no more spurious successes for FreeBSD make
